switch from 1:1 to single-copy ortholog

--- a/manuscript/common_latex.tex
+++ b/manuscript/common_latex.tex
@@ -20,7 +20,7 @@
 \newcommand{\tableexplanation}[2]{The top 50 genes by FPKM in #1 which
   are not annotated as Mt\_rRNA, Mt\_tRNA, rRNA or whose \human
   ortholog is a housekeeping gene. Gene symbol is the gene symbol or
-  Ensembl gene id. Human Symbol is the 1:1 human ortholog or the best
+  Ensembl gene id. Human Symbol is the single-copy \human ortholog or the best
   human alignment when enclosed in parenthesis. Human Name is the HUGO
   name corresponding to the human symbol. A complete list of all genes
   is in \cref{#2}.}
