--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -504,12 +504,16 @@ print(pp %>%
 \subsection{Comparative Analysis of Gene Expression}
 \label{sec:comp-analys-gene}
 
-Single-copy (1-to-1) orthologs in were determined using
-Ensembl v.80 gene trees via Biomart using the biomaRt R package
+Single-copy (1-to-1) orthologs in were determined using Ensembl v.80
+gene trees via Biomart using the biomaRt R package
 \cite{Durinck.ea2009:Mappingidentifiersforintegration}. %
 A total of \Sexpr{combined.fpkm[species!="homo sapiens" & mean_fpkm >=
-  1,length(unique(human_name))]} single-copy orthologous genes were expressed
-in at least one species.
+  1,length(unique(human_name))]} single-copy orthologous genes were
+expressed in at least one species. We also obtained orthology from the
+perspective of each species to all other species using biomaRt package
+and Ensembl v.80 database to determine the percentage of highly
+expressed genes which had an orthology of one-to-one, one-to-many,
+many-to-many, or novel/unknown.
 
 Significant shifts in expression levels between groups of species were
 calculated using Student's t test on single-copy orthologs using the mean of
@@ -628,7 +632,15 @@ with an average of %
 of reads mapping to the respective reference genome (Supplemental
 \cref{tab:ref_genome_aligned_species}). Read length was not a
 significant predictor of unmapped read percentage (Supplemental
-\cref{fig:transcriptome_reads_vs_read_length}). The expression of
+\cref{fig:transcriptome_reads_vs_read_length}). %
+%
+Between 20\% and 40\% of all highly expressed genes in each species
+were single-copy orthologs with all other analyzed species, with the
+remainder being mostly one-to-many or many-to-many in comparison to at
+least one other species (Supplemental
+\cref{tab:orthologs_in_each_species}).
+%
+The expression of
 all genes with \ac{FPKM} $\ge 50$ is shown in Supplemental
 \cref{tab:all_ateles_fusciceps_placenta,tab:all_homo_sapiens_placenta,tab:all_pan_paniscus_placenta,tab:all_mus_musculus_placenta,tab:all_spalax_galili_placenta,tab:all_spalax_carmeli_placenta,tab:all_bos_taurus_placenta,tab:all_ovis_aries_placenta,tab:all_sus_scrofa_placenta,tab:all_equus_caballus_placenta,tab:all_canis_familiaris_placenta,tab:all_loxodonta_africana_placenta,tab:all_dasypus_novemcinctus_placenta,tab:all_monodelphis_domestica_placenta}.
 
